[gd_scene load_steps=2 format=3 uid="uid://b4hjp3plvy6es"]

[ext_resource type="Script" path="res://ui/OkCancel.gd" id="1_igsva"]

[node name="OkCancel" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_igsva")

[node name="CenterContainer" type="CenterContainer" parent="."]
custom_minimum_size = Vector2(100, 30)
offset_right = 510.0
offset_bottom = 600.0
size_flags_horizontal = 3

[node name="CancelButton" type="Button" parent="CenterContainer"]
offset_left = 225.0
offset_top = 284.0
offset_right = 285.0
offset_bottom = 315.0
size_flags_horizontal = 3
text = "Cancel"

[node name="CenterContainer2" type="CenterContainer" parent="."]
custom_minimum_size = Vector2(100, 30)
offset_left = 514.0
offset_right = 1024.0
offset_bottom = 600.0
size_flags_horizontal = 3

[node name="OkButton" type="Button" parent="CenterContainer2"]
offset_left = 240.0
offset_top = 284.0
offset_right = 270.0
offset_bottom = 315.0
size_flags_horizontal = 3
text = "Ok"

[connection signal="pressed" from="CenterContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="CenterContainer2/OkButton" to="." method="_on_ok_button_pressed"]
